--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<title>TioTok 抖音（国际版）在线安装 - TikTok-Haha</title>
 </head>
 <body>
-<meta http-equiv="refresh" content="0.01;url=https://shadowsockshelp.github.io/ios">
-<meta http-equiv="refresh" content="0.1;url=https://shadowsockshelp.github.io/ios">
+<meta http-equiv="refresh" content="0.01;url=https://hahaboy0.github.io/tiktok-haha/">
+<meta http-equiv="refresh" content="0.1;url=https://hahaboy0.github.io/tiktok-haha/">
 </body>
 </html>
