--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
-	<meta name="description" content="Shadowrocket（小火箭）在线安装" />
-	<meta name="keywords" content="Shadowrocket" />
-	<title>TikTok 抖音（国际版）在线安装 - Shadowsocks-Help</title>
-    <link rel="shortcut icon" href="https://shadowsocks-help.github.io/ios/assets/images/logo.png">
+	<meta name="description" content="TikTok (国际版) 在线安装" />
+	<meta name="keywords" content="TikTok" />
+	<title>TikTok (国际版) 在线安装 - 哈哈</title>
+    <link rel="shortcut icon" href="https://hahaboy0.github.io/tiktok-haha/assets/images/logo.png">
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
     <link rel="stylesheet" href="assets/css/style.css" />
     <link rel="stylesheet" href="assets/css/my.css" />
@@ -16,7 +16,7 @@
         <div class="main">
 			<div class="topbread" style="margin-bottom: 20px;">
 		    	<div class="container">
-		        	<h1 class="text-center">TikTok 抖音</h1>
+		        	<h1 class="text-center">TikTok (国际版)</h1>
                  
 		    	</div>
 			</div>
@@ -24,7 +24,7 @@
 		        <div style="text-align:center;">
 		  			<div class="polaroid">
                         <div class="logo">
-                            <img src="https://shadowsocks-help.github.io/ios/assets/images/icon.jpg" class="img-circle" width="120" height="120" />
+                            <img src="https://hahaboy0.github.io/tiktok-haha/assets/images/icon.jpg" class="img-circle" width="120" height="120" />
                         </div>
                     </div>
 		            <ul class="breadcrumb" id="ul">
@@ -42,7 +42,7 @@
 							</div>
                       	</div>
 		                <span id="checkinfo">
-		                    <a href="itms-services://?action=download-manifest&url=https://shadowsocks-help.github.io/ios/ipa.plist" class="btn btn-success btn-lg btn-circle" id="uaApp">在线安装</a>
+		                    <a href="itms-services://?action=download-manifest&url=https://hahaboy0.github.io/tiktok-haha/ipa.plist" class="btn btn-success btn-lg btn-circle" id="uaApp">在线安装</a>
 		                    <div class="uatip" id="uaTip">
 								<span class="uatip-icon"></span>
 								<p class="uatip-txt">点击右上角<br/>选择在Safari中打开</p>
@@ -58,8 +58,8 @@
 		    </div>
 	        <div class="col-md-8 col-md-offset-2">
 	            <div class="text-center">               
-		<p> <a href="" target="blank">Designed to protect your Internet traffic.</a> </p>
-		<p> <a href="" target="blank">一鍵接入，鏈接全球！</a> </p>
+		<p> <a href="" target="blank">哈哈共享屋</a> </p>
+		<p> <a href="" target="blank">有问题可联系哈</a> </p>
 
                </p>
               </div>
@@ -68,7 +68,7 @@
     </div>
 	<div class="footer">
         <div class="text-center">
-             ©&nbsp;2015-2019 <a href="" target="blank">Shadowrocket</a>
+             ©&nbsp;2021-2022 <a href="" target="blank">哈哈</a>
 		<a href="" target="blank">Help</a>
 		                         
         </div>
